# OmniNode-Protocol

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  implement_phase1.sh  implement_phase2_part5.sh  pyproject.toml  showcase_tui.py  test_tensor_pingpong.py  test_zero_copy.py
crates/omni-bridge/: Cargo.toml
crates/omni-bridge/src/: errors.rs  events.rs  lib.rs  net.rs  pipeline.rs  runtime.rs  shard_view.rs  store.rs  types.rs
crates/omni-contributor/: Cargo.toml
crates/omni-contributor/src/: archive.rs  canonical.rs  cleanup.rs  discover.rs  error.rs  handoff.rs  handoff_verify.rs  integrity.rs  integrity_evidence_bundle.rs  integrity_evidence_chain.rs  job.rs  lib.rs  net.rs  peer_advert.rs  peer_routing.rs  planner.rs  posted.rs  relay.rs  repair.rs  restore.rs  result.rs  resume.rs  run.rs  runner.rs  session.rs  session_verify.rs  signed_baseline.rs  signed_bundle.rs  signed_chain.rs  signed_diff.rs  signing.rs  snip.rs  state.rs  status.rs  supersession.rs  supersession_verify.rs  tensor_transport.rs  verify.rs  watch.rs
crates/omni-contributor/tests/: aggregate_supersession_integration.rs  archive_session_integration.rs  handoff_byte_stability.rs  handoff_integration.rs  handoff_negatives.rs  integrity_evidence_bundle.rs  integrity_evidence_chain.rs  invalid_partial_triage.rs  network_announcement_byte_stability.rs  network_announcement_negatives.rs  peer_advert_byte_stability.rs  peer_advert_negative_cases.rs  peer_advert_verified_join_loader.rs  peer_routing_cache.rs  phase_b_partial_apply.rs  planner_resume_integration.rs  planner_unit.rs  posted_envelope_byte_stability.rs  posted_envelope_negative_cases.rs  posture_preserved.rs  repair_plan.rs  restore_session_archive.rs  run_and_verify_roundtrip.rs  schema_byte_stability.rs  session_announcement_processing.rs  session_byte_stability.rs  session_integration.rs  session_negatives.rs  session_network_byte_stability.rs  signed_baseline.rs  signed_integrity_diff.rs  signed_integrity_evidence_bundle.rs  signed_integrity_evidence_chain_report.rs  state_cleanup_plan.rs  state_cleanup_quarantine_restore.rs  state_integrity_diff.rs  state_integrity_scan.rs  state_resume_integration.rs  state_store_unit.rs  status_report.rs  (+7 more)
crates/omni-net/: Cargo.toml
crates/omni-net/src/: behaviour.rs  capability.rs  codec.rs  discovery.rs  events.rs  gossip.rs  identity.rs  lib.rs  nat.rs  swarm.rs  tensor_codec.rs  transport.rs
crates/omni-node/: Cargo.toml
crates/omni-node/src/: contributor_cli.rs  evidence_anchor_cli.rs  main.rs  operator.rs  settlement_cli.rs  settlement_signer.rs
crates/omni-ops/: Cargo.toml
crates/omni-ops/src/: archive.rs  cleanup.rs  error.rs  integrity.rs  lib.rs  repair.rs  restore.rs  resume.rs  status.rs
crates/omni-ops/tests/: archive_session_integration.rs  invalid_partial_triage.rs  o5_extraction_boundary.rs  phase_b_partial_apply.rs  repair_plan.rs  restore_session_archive.rs  state_cleanup_plan.rs  state_cleanup_quarantine_restore.rs  state_integrity_diff.rs  state_integrity_scan.rs  state_resume_integration.rs  status_report.rs
crates/omni-pipeline/: Cargo.toml
crates/omni-pipeline/src/: coordinator.rs  error.rs  executor.rs  heartbeat.rs  lib.rs  planner.rs  scheduler.rs  session.rs  transport.rs
crates/omni-proofs-halo2-production-mlp/: Cargo.toml  build.rs
crates/omni-proofs-halo2-production-mlp/assets/: canonical_spec.json
crates/omni-proofs-halo2-production-mlp/src/: canonical.rs  circuit.rs  encoding.rs  lib.rs  manifest.rs  prover.rs  shared.rs  verifier.rs
crates/omni-proofs-halo2-production-mlp/tests/: chain_digest_roundtrip.rs  cross_framework_corpus.rs  halo2_benchmark.rs  halo2_production_mlp_prove_verify_roundtrip.rs  halo2_proof_verifies.rs
crates/omni-proofs-halo2-reference/: Cargo.toml  README.md  build.rs
crates/omni-proofs-halo2-reference/assets/: canonical_spec.json
crates/omni-proofs-halo2-reference/src/: canonical.rs  circuit.rs  encoding.rs  lib.rs  manifest.rs  prover.rs  shared.rs  verifier.rs
crates/omni-proofs-halo2-reference/tests/: cross_framework_corpus.rs  cross_framework_equivalence.rs  halo2_arbitrary_inputs.rs  halo2_end_to_end.rs  halo2_proof_verifies.rs  halo2_reference_prove_verify_roundtrip.rs
crates/omni-sumchain/: Cargo.toml  README.md
crates/omni-sumchain/src/: anchor_dto.rs  anchor_tx.rs  client.rs  dto.rs  lib.rs  outer_sign.rs  rpc.rs  status.rs  tx.rs
crates/omni-sumchain/tests/: anchor_adapter_integration.rs  anchor_stage_13_9_batch_and_tuple.rs  anchor_submit_feature_gate.rs  chain_produced_fixture.rs  error_prefix_classification_is_stable.rs  live_local_mirror.rs  no_submit_feature.rs  parity_vendored_primitives.rs  real_transport_min_fee_precision.rs  settlement_read_hermetic.rs  stage6_wire_parity.rs  unit_dto.rs  unit_rpc_envelope.rs  unit_status_mapping.rs  unit_submit_construction.rs
crates/omni-zkml/: Cargo.toml
crates/omni-zkml/src/: artifact.rs  attestation.rs  chain.rs  chain_wire.rs  error.rs  lib.rs  orchestration.rs  proof.rs  registry.rs  staleness.rs
crates/omni-zkml/tests/: chain_attestation_vectors.rs  evidence_anchor_archive.rs  evidence_anchor_cleanup.rs  evidence_anchor_consistency.rs  evidence_anchor_export.rs  evidence_anchor_import.rs  evidence_anchor_integration.rs  evidence_anchor_reconcile_integration.rs  evidence_anchor_stage_13_10_acceptance.rs  evidence_anchor_stage_13_9.rs  evidence_anchor_summary_and_health.rs  evidence_anchor_wire_vectors.rs  proof_pipeline_vectors.rs
tools/halo2_production_mlp_regen/: Cargo.toml  README.md
tools/halo2_production_mlp_regen/src/: main.rs
tools/halo2_reference_regen/: Cargo.toml  README.md
tools/halo2_reference_regen/src/: main.rs
tools/r0-zkvm-bench/: .gitignore  Cargo.toml  README.md
tools/r0-zkvm-bench/scripts/: check_no_prod_dep.sh
tools/r0-zkvm-bench/src/: bench.rs  classification.rs  envelope.rs  fixture.rs  lib.rs  manifest.rs  merkle.rs  model_auth.rs  object.rs  statement.rs  verifier.rs  workload.rs
tools/r0-zkvm-bench/tests/: adversarial_binding.rs  api_surface.rs  (+5 more)
tools/rumus_export/: Cargo.toml  README.md
(+126 files in other folders)
