[workspace]
resolver = "2"
members = [
    "crates/omni-types",
    "crates/omni-net",
    "crates/omni-store",
    "crates/omni-bridge",
    "crates/omni-pipeline",
    "crates/omni-zkml",
    "crates/omni-sumchain",
    "crates/omni-node",
    "crates/omni-proofs-halo2-reference",
    "crates/omni-proofs-halo2-production-mlp",
    "crates/omni-contributor",
    "crates/omni-ops",
]
# Stage 11b.1.a: `tools/` holds developer-host manual fixture
# generators (rumus_export, pytorch_export, tensorflow_export,
# caffe_export). They are intentionally excluded from the workspace
# so the operator binary's build graph cannot transitively pull
# framework runtimes (RUMUS / PyTorch / TensorFlow / Caffe).
exclude = ["tools"]

[workspace.package]
version      = "0.1.1"
edition      = "2024"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/SUM-INNOVATION/OmniNode-Protocol"
rust-version = "1.85"

# ─── Shared Dependencies ──────────────────────────────────────────────────────

[workspace.dependencies]

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde       = { version = "1.0",         features = ["derive"] }
serde_json  = "1.0"
bincode     = { version = "2.0.0-rc.3", features = ["serde"] }
ciborium    = "0.2"

# Error handling
thiserror = "2.0"
anyhow    = "1.0"

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# ─── Phase 1: Networking ──────────────────────────────────────────────────────

libp2p = { version = "0.55", features = [
    "macros",
    "tokio",
    "noise",
    "yamux",
    "quic",
    "tcp",
    "dns",
    "kad",
    "mdns",
    "gossipsub",
    "identify",
    "autonat",
    "relay",
    "dcutr",
    "request-response",
] }

libp2p-identity = "0.2"
multiaddr       = "0.18"
prost           = "0.13"
prost-build     = "0.13"

# ─── Phase 2: Storage ────────────────────────────────────────────────────────
# iroh removed — unresolvable hickory-resolver conflict with libp2p 0.55.
# Shard transfer uses libp2p request-response instead.

memmap2    = "0.9"
blake3     = "1.5"
cid        = "0.11"
multihash  = "0.19"
tempfile   = "3.14"
bs58       = "0.5"

# ─── Phase 5 Stage 7a: SUM Chain adapter ─────────────────────────────────────
# Sync HTTP client for JSON-RPC against the local SUM Chain mirror.
# Used by `omni-sumchain` only.
ureq       = "2.10"

# ─── Phase 5 Stage 7b / 9c: SUM Chain primitives ─────────────────────────────
# Stage 9c: swapped from the private `SUM-INNOVATION/sum-chain` git
# source at rev `d83e45a4` to the chain team's public crates.io
# release, dual-licensed MIT OR Apache-2.0.
#
# Issue #87 — bumped `sumchain-primitives` and `sumchain-crypto` from
# v0.1.0 to v0.2.0 so we can construct the InferenceSettlement claim
# tx: `TxPayload::InferenceSettlement(InferenceSettlementTxData { op:
# InferenceSettlementOperation::ClaimReward(...) })` is a v0.2.0
# addition. The v0.2.0 release preserves the pre-existing
# `TxPayload::InferenceAttestation(_)` bincode ordinal (variant 21 in
# `TxType`) per the crate's own append-only invariant; the Stage 6
# parity test at `tests/parity_vendored_primitives.rs` and the wire
# fixture at `tests/fixtures/chain_attestation_vectors.json` are
# re-run under `--features submit` after the bump and must remain
# byte-identical.
#
# Used by `omni-sumchain` only, and only behind the `submit` /
# `settlement-submit` features. Default builds resolve entirely from
# the crates.io index without pulling either crate.
sumchain-primitives = "0.2.0"
sumchain-crypto     = "0.2.0"

# ─── Phase 3: FFI ────────────────────────────────────────────────────────────

pyo3 = { version = "0.23", features = ["extension-module"] }

# ─── Phase 4: Pipeline ───────────────────────────────────────────────────────

safetensors    = "0.7"
ndarray        = "0.16"
tokio-util     = "0.7"
dashmap        = "6.1"
priority-queue = "2.1"
petgraph       = "0.7"

# ─── Phase 5: zkML ───────────────────────────────────────────────────────────
# ezkl and risc0 are added directly in crates/omni-zkml/Cargo.toml when Phase 5
# begins — their build requirements are too heavy for workspace-level pre-loading.

# ─── Async Utilities ─────────────────────────────────────────────────────────

# Provides StreamExt::select_next_some() used in the libp2p Swarm event loop
futures     = "0.3"
async-trait = "0.1"

# ─── Utilities ───────────────────────────────────────────────────────────────

bytes   = "1.9"
uuid    = { version = "1.11", features = ["v4"] }
clap    = { version = "4.5",  features = ["derive"] }
rand    = "0.9"
chrono  = { version = "0.4",  features = ["serde"] }

# ─── Internal Crates ─────────────────────────────────────────────────────────

omni-types    = { path = "crates/omni-types" }
omni-net      = { path = "crates/omni-net" }
omni-store    = { path = "crates/omni-store" }
omni-bridge   = { path = "crates/omni-bridge" }
omni-pipeline = { path = "crates/omni-pipeline" }
omni-zkml     = { path = "crates/omni-zkml" }
omni-sumchain = { path = "crates/omni-sumchain" }
# Stage 11b.1.b — only consumed by `omni-node` under the
# `halo2-reference-verify` opt-in feature. Default `cargo build`
# (no features) never reaches this dependency.
omni-proofs-halo2-reference = { path = "crates/omni-proofs-halo2-reference" }
# Stage 11d.2 — first production-grade fixed-point MLP proof class.
# Only consumed by `omni-node` under the `stage11d-production-verify`
# opt-in feature. Default `cargo build` (no features) never reaches
# this dependency. Off-chain only — never in chain wire / tx / digest.
omni-proofs-halo2-production-mlp = { path = "crates/omni-proofs-halo2-production-mlp" }
# Stage 12.0 — Contributor Inference Node workflow (AttestationOnly).
# Off-chain only. Default `omni-node` build includes this crate; CI's
# default-tree-check confirms no halo2/prover deps are pulled.
omni-contributor = { path = "crates/omni-contributor" }
# O5 (issue #103) — operator observability report-generators extracted
# from omni-contributor. Local-disk only; depends only on
# omni-contributor (no chain/proof/network/RPC). omni-node → omni-ops
# → omni-contributor.
omni-ops = { path = "crates/omni-ops" }
