[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "omninode"
version = "0.1.0"
description = "Python bindings for OmniNode Protocol — decentralized AI inference"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest", "maturin"]

[tool.maturin]
bindings = "pyo3"
manifest-path = "crates/omni-bridge/Cargo.toml"
python-source = "python"
module-name = "omninode._omni_bridge"
features = ["pyo3/extension-module"]

