[package]
name             = "omni-contributor"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

# Stage 12.0 — Contributor Inference Node workflow (AttestationOnly).
#
# Off-chain only. Implements the numbered contributor/inference flow
# (chart items 2–6: dispatch + verification requirement → fetch from
# SNIP → run local inference → produce response + evidence artifact →
# deliver/publish response). No chain wire / Stage 7b tx / SUM Chain
# RPC / `InferenceAttestationDigest` / chain-side verification /
# proof-system allowlist touched.
#
# Stage 11d.3 reframe posture preserved: chain remains neutral; proof
# acceptance is a local verifier policy decision; this crate's
# verifier is one such local policy gate. `MAINNET_APPROVED_*`
# remain empty.

[features]
default = []
# (No verify-production-proof / halo2 feature in Stage 12.0. Production-
# proof evidence is a closed-enum extension reserved for a future
# `schema_version: 2` migration; see docs/stage12-contributor-protocol.md.)
#
# Stage 12.2 — opt-in libp2p network relay. Default builds (including
# every test in this crate) pull zero networking deps; the in-memory
# relay is sufficient for the full test suite. The `omni-node`
# operator binary enables this feature to wire `OmniNetRelay` into
# the announce-* / watch-network-* CLI subcommands.
network = ["dep:omni-net", "dep:tokio", "dep:libp2p"]

[dependencies]
# Stage 12.0 — kept deliberately lean. NO `omni-zkml` (chain/proof
# concerns), NO `omni-pipeline` (single-runner manual flow this stage),
# NO halo2/pasta/prover deps. Adding any of these is a separate stage.
omni-types       = { workspace = true }
omni-store       = { workspace = true }   # for SnipV2Adapter trait + check_lifecycle
serde            = { workspace = true }
serde_json       = { workspace = true }
bincode1         = { package = "bincode", version = "1.3" }
blake3           = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
chrono           = { workspace = true }
libp2p-identity  = { workspace = true }   # Ed25519 signing — direct dep
# Stage 12.5 — Multiaddr parsing for ContributorPeerAdvertisement
# schema validation. Small crate; does NOT pull libp2p transport.
multiaddr        = { workspace = true }
base64           = "0.22"                 # ExternalCommandRunner stdout
tempfile         = { workspace = true }   # SNIP byte wrappers (Option A)

# Stage 12.2 — optional libp2p network relay. Default-off; pulled
# only when --features network is set (via omni-node's CLI build).
omni-net         = { workspace = true, optional = true }
tokio            = { workspace = true, optional = true }
# Stage 12.4 — only PeerId / Multiaddr types for the
# OmniNetTensorTransport peer-hint parser. Tied to the `network`
# feature; default builds still pull zero networking deps.
libp2p           = { workspace = true, optional = true }

[dev-dependencies]
# (None unique to dev; runtime deps cover the tests.)
