[package]
name             = "omni-net"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
omni-types = { workspace = true }
libp2p     = { workspace = true }
futures    = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
bincode     = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio              = { workspace = true }
tracing-subscriber = { workspace = true }
