[package]
name             = "omni-node"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "omni-node"
path = "src/main.rs"

[features]
# Stage 9a + 9c: default-OFF. With `submit`, the binary gains the
# attestation submit / retry path (`operator smoke`, retry-enabled
# `operator loop`) and `omni-sumchain` pulls the public chain
# primitives (`sumchain-primitives` + `sumchain-crypto` v0.1.0,
# crates.io, MIT OR Apache-2.0). Without `submit`, only the
# read-only operator surface (watch-activation, preflight,
# query [+--tx-hash], derive-address, registry list/show,
# monitor-only loop) is compiled and the chain primitives are absent
# from the compile graph entirely. Both builds resolve from public
# sources only — no GitHub credential is required at any step.
default = []
submit  = ["omni-sumchain/submit"]
# Stage 11b.1.b — opt-in feature that pulls the halo2 reference
# verifier into the operator binary's `verify-proof` dispatch.
# Default-OFF: the operator binary's compile graph contains zero
# halo2 / pasta / IPA dependencies unless this feature is set.
halo2-reference-verify = ["dep:omni-proofs-halo2-reference"]
# Stage 11d.2 — opt-in feature that pulls the halo2 PRODUCTION
# fixed-point-MLP verifier into the operator binary's `verify-proof`
# dispatch. Default-OFF (orthogonal to `halo2-reference-verify`);
# the operator binary's compile graph contains zero halo2 deps unless
# at least one halo2 verifier feature is set. Mainnet posture is
# preserved: every accepted artifact under this feature is still
# refused by `check_mainnet_eligible` layer 6 because
# `MAINNET_APPROVED_PROOF_SYSTEM_ENTRIES` is empty through Stage 11d.2.
stage11d-production-verify = ["dep:omni-proofs-halo2-production-mlp"]

[dependencies]
omni-types         = { workspace = true }
omni-net           = { workspace = true }
omni-store         = { workspace = true }
omni-zkml          = { workspace = true }
omni-sumchain      = { workspace = true }
tokio              = { workspace = true }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
# Stage 11a: BLAKE3 of synthetic-mode model/input/output bytes inside
# the mock-v1 attestation builder (`build_mock_v1_attestation`). The
# canonical proof envelope BLAKE3 is also computed here; we don't go
# through a SnipV2Adapter in synthetic mode (it's deliberately not
# published to a real SNIP store).
blake3             = { workspace = true }
# Stage 11b.1.b — opt-in halo2 reference verifier. Only enters the
# compile graph when `--features halo2-reference-verify` is passed;
# `cargo build -p omni-node` with default features pulls zero halo2.
omni-proofs-halo2-reference = { workspace = true, optional = true, features = ["verify"] }
# Stage 11d.2 — opt-in halo2 production-MLP verifier. Only enters the
# compile graph when `--features stage11d-production-verify` is passed;
# `cargo build -p omni-node` with default features (and without
# `halo2-reference-verify`) pulls zero halo2.
omni-proofs-halo2-production-mlp = { workspace = true, optional = true, features = ["verify"] }
# Stage 12.0 — Contributor Inference Node workflow. Default-included.
# CI's default-tree-check confirms this dep does NOT pull halo2/prover
# deps even though it ships in the default graph. `omni-store` (already
# above) provides SnipV2Cli for the subcommand's adapter; the contributor
# crate handles the rest.
omni-contributor = { workspace = true }
# Stage 12.0 — UTC time stamping for produced_at_utc on results.
chrono     = { workspace = true }

[dev-dependencies]
tempfile           = { workspace = true }
