[package]
name             = "omni-node"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "omni-node"
path = "src/main.rs"

[features]
# Stage 9a + 9c: default-OFF. With `submit`, the binary gains the
# attestation submit / retry path (`operator smoke`, retry-enabled
# `operator loop`) and `omni-sumchain` pulls the public chain
# primitives (`sumchain-primitives` + `sumchain-crypto` v0.1.0,
# crates.io, MIT OR Apache-2.0). Without `submit`, only the
# read-only operator surface (watch-activation, preflight,
# query [+--tx-hash], derive-address, registry list/show,
# monitor-only loop) is compiled and the chain primitives are absent
# from the compile graph entirely. Both builds resolve from public
# sources only — no GitHub credential is required at any step.
default = []
submit  = ["omni-sumchain/submit"]
# Issue #83 — InferenceSettlement read surface. Dependency-neutral:
# activates no new external crates. Downstream operator CLI (Issue
# #84), observability markers (Issue #85), and verifier self-claim
# (Issue #87) each build on this feature. Default builds resolve to
# the exact same dep tree with or without this flag.
settlement-read = ["omni-sumchain/settlement-read"]
# Stage 11b.1.b — opt-in feature that pulls the halo2 reference
# verifier into the operator binary's `verify-proof` dispatch.
# Default-OFF: the operator binary's compile graph contains zero
# halo2 / pasta / IPA dependencies unless this feature is set.
halo2-reference-verify = ["dep:omni-proofs-halo2-reference"]
# Stage 11d.2 — opt-in feature that pulls the halo2 PRODUCTION
# fixed-point-MLP verifier into the operator binary's `verify-proof`
# dispatch. Default-OFF (orthogonal to `halo2-reference-verify`);
# the operator binary's compile graph contains zero halo2 deps unless
# at least one halo2 verifier feature is set. Mainnet posture is
# preserved: every accepted artifact under this feature is still
# refused by `check_mainnet_eligible` layer 6 because
# `MAINNET_APPROVED_PROOF_SYSTEM_ENTRIES` is empty through Stage 11d.2.
stage11d-production-verify = ["dep:omni-proofs-halo2-production-mlp"]
# Stage 14.1 — opt-in feature that pulls the halo2 reference
# PROVER (in addition to the verifier) into the operator binary so
# operators can generate Stage11bHalo2Reference proofs in dev /
# testnet. Superset of `halo2-reference-verify`: the underlying
# crate's `prove` feature is a superset of `verify`, and the
# operator-side prove path is only useful alongside the verify
# path. Pulls `rand_chacha` (deterministic prover RNG) into the
# compile graph. Default-OFF; mainnet posture unchanged —
# `Stage11bHalo2Reference` is still hard-refused on `chain_id == 1`
# at `check_mainnet_eligible` layers 1 + 3 + 6.
halo2-reference-prove = ["halo2-reference-verify", "omni-proofs-halo2-reference/prove"]
# Stage 14.5 — opt-in feature that pulls the halo2 PRODUCTION-MLP
# PROVER (in addition to the verifier) into the operator binary so
# operators can generate Stage11dProductionFixedPointMlp proofs in
# dev / testnet. Superset of `stage11d-production-verify`: the
# underlying crate's `prove` feature is a superset of `verify`,
# and the operator-side prove path is only useful alongside the
# verify path. Pulls `rand_chacha` (deterministic prover RNG)
# transitively. Default-OFF; mainnet posture unchanged —
# `Stage11dProductionFixedPointMlp` is still hard-refused on
# `chain_id == 1` at `check_mainnet_eligible` layer 6
# (`MAINNET_APPROVED_PROOF_SYSTEM_ENTRIES` empty). Distinct from
# Stage 14.1: production artifacts declare
# `testnet_or_dev_only=Some(false)`, so layer 1 does NOT fire —
# layer 6 is the sole mainnet refusal.
stage11d-production-prove = [
    "stage11d-production-verify",
    "omni-proofs-halo2-production-mlp/prove",
]

[dependencies]
omni-types         = { workspace = true }
omni-net           = { workspace = true }
omni-store         = { workspace = true }
omni-zkml          = { workspace = true }
omni-sumchain      = { workspace = true }
tokio              = { workspace = true }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
# Stage 11a: BLAKE3 of synthetic-mode model/input/output bytes inside
# the mock-v1 attestation builder (`build_mock_v1_attestation`). The
# canonical proof envelope BLAKE3 is also computed here; we don't go
# through a SnipV2Adapter in synthetic mode (it's deliberately not
# published to a real SNIP store).
blake3             = { workspace = true }
# Stage 11b.1.b — opt-in halo2 reference verifier. Only enters the
# compile graph when `--features halo2-reference-verify` is passed;
# `cargo build -p omni-node` with default features pulls zero halo2.
omni-proofs-halo2-reference = { workspace = true, optional = true, features = ["verify"] }
# Stage 11d.2 — opt-in halo2 production-MLP verifier. Only enters the
# compile graph when `--features stage11d-production-verify` is passed;
# `cargo build -p omni-node` with default features (and without
# `halo2-reference-verify`) pulls zero halo2.
omni-proofs-halo2-production-mlp = { workspace = true, optional = true, features = ["verify"] }
# Stage 12.0 — Contributor Inference Node workflow. Default-included.
# CI's default-tree-check confirms this dep does NOT pull halo2/prover
# deps even though it ships in the default graph. `omni-store` (already
# above) provides SnipV2Cli for the subcommand's adapter; the contributor
# crate handles the rest.
#
# Stage 12.2 — the `network` feature pulls in the omni-net libp2p
# relay. omni-net is already a transitive dep of omni-node via omni-store,
# so this adds no halo2/prover deps to the default graph (CI's
# default-tree-check re-asserts).
omni-contributor = { workspace = true, features = ["network"] }
# Stage 12.0 — UTC time stamping for produced_at_utc on results.
chrono     = { workspace = true }

[dev-dependencies]
tempfile           = { workspace = true }
